kubernetes/11-deployment2/api-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go
  labels:
    app: api-go
    lang: go
    type: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-go
  template:
    metadata:
      labels:
        app: api-go
    spec:
      containers:
      - name: api
        image: mxmln/api-go:0.0.2
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: api-go
spec:
  selector:
    app: api-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
